Bug 1262727: [webm] Ensure first frame returned after seek is a keyframe. r=kinetik

Same after a reset or the first frame ever returned by the demuxer.

MozReview-Commit-ID: 6b7XlIk5GE4